--- a/GreenBridge/greenbridge/src/Pages/Home/LandingPage.css
+++ b/GreenBridge/greenbridge/src/Pages/Home/LandingPage.css
@@ -83,12 +83,14 @@ ul {
 
 .hero-content {
     max-width: 50%;
+    margin-left: 200px;
 }
 
 .hero-content h2 {
     font-size: 36px;
     color: #343a40;
     margin-bottom: 20px;
+    
 }
 
 .hero-content p {
@@ -113,7 +115,7 @@ ul {
 }
 
 .hero-image img {
-    max-width: 100%;
+    max-width: 120%;
     height: auto;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -302,8 +304,8 @@ ul {
     margin-bottom: 30px;
 }
 
-.contact-btn {
-    background-color: #007bff;
+.contact-btns {
+    background-color: #ff1900;
     color: white;
     padding: 12px 25px;
     border-radius: 5px;
