--- a/GreenBridge/greenbridge/src/Pages/Dashboard/User/wasteCollection.css
+++ b/GreenBridge/greenbridge/src/Pages/Dashboard/User/wasteCollection.css
@@ -1,7 +1,7 @@
 .waste-collection-container {
     width: 100%;
     max-width: 600px;
-    margin: 0 auto;
+    margin: 150px auto;
     padding: 20px;
     background-color: #f8f8f8;
     border-radius: 8px;
