--- a/GreenBridge/greenbridge/src/components/DataTable.css
+++ b/GreenBridge/greenbridge/src/components/DataTable.css
@@ -65,7 +65,7 @@
   }
   
   .admin-pagination button {
-    background-color: #007bff;
+    background-color: #00ff62;
     color: white;
     border: none;
     padding: 8px 16px;
