--- a/GreenBridge/greenbridge/src/components/Menubox.css
+++ b/GreenBridge/greenbridge/src/components/Menubox.css
@@ -3,7 +3,7 @@
     border: 1px solid rgb(255, 255, 255);
     border-radius: 0px;
     padding: 8px;
-    background-color: #00bfff;
+    background-color: #4fc076;
     display: flex;
     align-items: center;
     justify-content: center;
