--- a/GreenBridge/greenbridge/src/Pages/Dashboard/User/CommonRequest.css
+++ b/GreenBridge/greenbridge/src/Pages/Dashboard/User/CommonRequest.css
@@ -1,7 +1,8 @@
 .common-request-container {
     padding: 2rem;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 5rem auto;
+    
 }
 
 .common-request-container h2 {
